31 March 2010: Matthijs
	- Commit b64_pton optimalized compat code (Martin Svec).

27 March 2010: Wouter
	- fix bug#303: misspelled error message.

19 March 2010: Wouter
	- documented nsid: "hex string" setting in nsd.conf.sample.

24 February 2010: Matthijs
	- nsid: option
	- Enable NSID support by default
	- --with-chroot configure option
	- Less stupid chroot error handling

15 February 2010: Matthijs
	- Skip memory cleanup to speed up reload (Martin Svec)

1 February 2010: Wouter
	- compat code for memcmp unsigned comparsions.

21 January 2010: Wouter
	- fixup debug sprintf to snprintf.

21 Januari: Matthijs
	- Secure string functions, including compat code for strlcat.
	- Randomness utility function
	- Prepare for default chroot

6 Januari: Wouter
	- check write errors when marking commit failed when difffile is broken.

6 Januari: Matthijs
	- Move to 3.2.5

23 December 2009: Matthijs
	- Store new options in nsd structure.

22 December 2009: Matthijs
	- New options 'ipv4-edns-size:' and 'ipv6-edns-size'.
	- Bug 276
	- Bug 286
	- Bug 288

21 December 2009: Matthijs
	- New option 'tcp-query-count:'.
	- New option 'tcp-timeout:' and configure option '--with-tcp-timeout'.
	- New zone option 'notify-retry:'.

11 December 2009: Wouter
	- Disable UDP IPv4 DF flag on Linux/FreeBSD/AIX with socket option.

20 November 2009: Matthijs
	- NSID bugfix: NSD did not recognize NSID in the query.

9 September 2009: Matthijs
	- DLV support

18 August 2009: Matthijs
	- Bug 269.
	- Typo: logincap.h -> login_cap.h

12 August 2009: Matthijs
	- Maintainers feedback

10 August 2009: Matthijs
	- Code review.
	- Also send errors to /dev/null in controlled_stop.
	- chown nsd.db

7 August 2009: Matthijs
	- Bug 266: don't have strptime build error

28 July 2009: Matthijs
	- Bug 263: make TSIG algorithms comparison case insensitive.

23 July 2009: Matthijs
	- Patch Paul Wouters for NSD using hardcoded name.

13 July 2009: Matthijs
	- Bug 236: allow RRs before the SOA RR.